--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<strong>	<title>Brett Patrick</title></strong>
 		
 	</head>
-	<body><img src=" https://s3.amazonaws.com/codecademy-blog/assets/ninja_zpsa5dbe37a.jpg.">
+	<body><img src=" https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/30714795_2099345343669420_7939563508949747024_n.jpg?_nc_cat=0&oh=51c183951068c892bbd13cae74598d10&oe=5B5D2716">
 	</body>
 	<p>I am a 19 year old student at the University of Maryland</p>
 	
