--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<strong>	<title>Brett Patrick</title></strong>
 		
 	</head>
+	<h1>Hello my name is Brett!</h1>
 	<body><img src=" https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/30714795_2099345343669420_7939563508949747024_n.jpg?_nc_cat=0&oh=51c183951068c892bbd13cae74598d10&oe=5B5D2716"width="300" height="400">
 	</body>
 	<p>I am a 19 year old student at the University of Maryland</p>
