--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    <center>
       <h1><strong>Hello my name is Brett!</strong></h1>
       <img src=" https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/30714795_2099345343669420_7939563508949747024_n.jpg?_nc_cat=0&amp;oh=51c183951068c892bbd13cae74598d10&amp;oe=5B5D2716" width="300" height="400">
-      <a href="http://hmpg.net/"></a>
+      <a href="http://hmpg.net/">http://hmpg.net/</a>
       <p><em>I am a 19 year old student at the University of Maryland! I am an Information Systems and Marketing double major. I am from the Bay Area in California.</em></p>
    </center>
    <ol>
