--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
    <head>
+      <!-- Here is my style code that includes a background image and different fint sizes and colors -->
       <style>
          
          html {
@@ -49,8 +50,10 @@
       <h1><strong>Hello my name is Brett!</strong></h1>
       <img src=" https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/30714795_2099345343669420_7939563508949747024_n.jpg?_nc_cat=0&amp;oh=51c183951068c892bbd13cae74598d10&amp;oe=5B5D2716" width="300" height="400">
       <p><a href="http://hmpg.net/">http://hmpg.net/</a></p>
+      <!-- The following paragrpah is a description about me -->
       <p><em>I am a 19 year old student at the University of Maryland! I am an Information Systems and Marketing double major. I am from the Bay Area in California.</em></p>
    </center>
+   <!-- The following are two lists, one ordered and one unordered. -->
    <ol>
       <li>hi</li>
       <li>blah</li>
@@ -61,6 +64,7 @@
       <li>blah</li>
       <li>blah</li>
    </ul>
+   <!-- Here are all the things you need to know about me -->
    <h3>Get to know me:</h3>
    <ol>
       <li>
@@ -72,6 +76,7 @@
          </ul>
       </li>
       <li>
+         <!-- The foods I always eat -->
          <h3>Favorite Foods</h3>
       </li>
       <ul id="tableInsides2">
@@ -80,6 +85,7 @@
          <li>Ice cream cake<br /><br /></li>
       </ul>
       <li id="tableHeadings">
+         <!-- The font gets bigger because it ranks from least favorite to most favorite -->
          <h4>Favortie Websites</h4>
       </li>
       <ul id="tableInsides3">
