--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
    <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118285388-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-118285388-1');
+</script>
+
+
       <!-- Here is my style code that includes a background image and different fint sizes and colors -->
       <style>
          
