--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          font-family: "Times New Roman";
          } 
          #tableInsides3 {
-         color: blue;
+         color: white;
          font-family: "Impact";
          } 
          div.size1 {
@@ -66,8 +66,8 @@
    </center>
    <!-- The following are two lists, one ordered and one unordered. -->
    <ol>
-      <li>hi</li>
-      <li>blah</li>
+      <li>Graphic design is my passion</li>
+      <li>I love peanutbutter</li>
       <li>blah</li>
    </ol>
    <ul>
