--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          font-family: "Times New Roman";
          } 
          #tableInsides3 {
-         color: white;
+         color: yellow;
          font-family: "Impact";
          } 
          div.size1 {
