--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          }
          h4 {
          font-size: 15px;
-         color: blue;
+         color: white;
          background-color: purple;
          }
          #tableInsides1 {
@@ -43,7 +43,7 @@
          font-family: "Times New Roman";
          } 
          #tableInsides3 {
-         color: yellow;
+         color: blue;
          font-family: "Impact";
          } 
          div.size1 {
