--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
    <ol>
       <li>Graphic design is my passion</li>
       <li>I love peanutbutter</li>
-      <li>blah</li>
+      <li>This is my first web page</li>
    </ol>
    <ul>
-      <li>hi</li>
-      <li>blah</li>
-      <li>blah</li>
+     <h2>Favorite Quotes</h2>
+         <ul id="tableInsides1">
+            <li>"In three words I can sum up everything I've learned about life: it goes on."</li>
+            <li>"If you want to know what a man's like, take a good look at how he treats his inferiors, not his equals."</li>
    </ul>
    <!-- Here are all the things you need to know about me -->
    <h3>Get to know me:</h3>
